--- a/pom.xml
+++ b/pom.xml
@@ -22,5 +22,19 @@
 
     </distributionManagement>
 
+    <dependencies>
+        <dependency>
+            <groupId>com.tictactec</groupId>
+            <artifactId>ta-lib</artifactId>
+            <version>0.4.0</version>
+
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.8.1</version>
+        </dependency>
+    </dependencies>
+
 
 </project>
